Fixes the navigation links and aligns them with the logo, all's done here :)

--- a/styles/main.css
+++ b/styles/main.css
@@ -38,9 +38,9 @@ body {
 .nav ul  {
 	display: inline-block;
 	right: 10px;
-	bottom: 0px;
+	top: -7px;
 	position: absolute;
-	padding-top: 5px;
+	padding-top: 0px;
 }
 
 .wrapper {
